--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
     - sudo apt-get install -y  build-essential cmake qt5-qmake 
 
 compiler: g++
-script: make build
+script: make -f Makefile.top build
