--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ notifications:
 email: false
 language: c++
 before_install:
+    - sudo apt-add-repository ppa:ubuntu-sdk-team/ppa
     - sudo apt-get update -qq
-    - sudo apt-get install -y  build-essential cmake qt5-qmake 
+    - sudo apt-get install -y qtdeclarative5-dev
+    - sudo apt-get install -y  build-essential cmake
 
 compiler: g++
 script: make -f Makefile.top build
