--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ notifications:
 email: false
 language: c++
 before_install:
-    - sudo apt-add-repository ppa:ubuntu-sdk-team/ppa
+    - sudo apt-add-repository ppa:ubuntu-sdk-team/ppa -y
     - sudo apt-get update -qq
     - sudo apt-get install -y qtdeclarative5-dev
     - sudo apt-get install -y  build-essential cmake
