--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
     - sudo apt-add-repository ppa:ubuntu-sdk-team/ppa -y
     - sudo apt-get update -qq
     - sudo apt-get install -y qtdeclarative5-dev
-    - sudo apt-get install -y  build-essential cmake libusb-dev
+    - sudo apt-get install -y  build-essential cmake libusb-1.0-0 libusb-1.0-0-dev
 
 compiler: g++
 script: make -f Makefile.top build
