--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
 PROJECT(NitrokeyApp)
-SET(PROJECT_VERSION "1.0") 
+SET(PROJECT_VERSION "0.2") 
 #ADD_DEFINITIONS(-DSEAFILE_CLIENT_VERSION=${PROJECT_VERSION}) 
 
 INCLUDE(FindPkgConfig)
@@ -217,17 +217,35 @@ SET(CPACK_GENERATOR
     "DEB;RPM")
 
 SET(CPACK_PACKAGE_NAME "nitrokey-app" )
-SET(CPACK_PACKAGE_VERSION "1.0" )
-SET(CPACK_PACKAGE_ARCHITECTURE `dpkg --print-architecture`)
+SET(CPACK_PACKAGE_VERSION ${PROJECT_VERSION} )
 SET(CPACK_PACKAGE_DEPENDS "" )
-SET(CPACK_PACKAGE_DESCRIPTION  "Application to manage your Nitrokey")
 
 # Deb
+#execute_process(COMMAND dpkg --print-architecture OUTPUT_VARIABLE CPACK_PACKAGE_ARCHITECTURE)
+execute_process(COMMAND uname -m OUTPUT_VARIABLE CPACK_DEBIAN_PACKAGE_ARCHITECTURE)
+SET(CPACK_DEBIAN_PACKAGE_DESCRIPTION  "Use and manage your Nitrokey")
+
+# We need to alter the architecture names as per distro rules
+IF("${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}" MATCHES "i[3-6]86")
+    set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE i386)
+ENDIF("${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}" MATCHES "i[3-6]86")
+IF("${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}" MATCHES "x86_64")
+    set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE amd64)
+ENDIF("${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}" MATCHES "x86_64")
+
 SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Georgios Gkitsas <george@nitrokey.com>" )
-SET(CPACK_PACKAGE_PRIORITY "optional")
-SET(CPACK_PACKAGE_SECTION "utils")
+SET(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
+SET(CPACK_DEBIAN_PACKAGE_SECTION "utils")
 
 # Rpm
+#execute_process(COMMAND dpkg --print-architecture OUTPUT_VARIABLE CPACK_RPM_PACKAGE_ARCHITECTURE)
+SET(CPACK_RPM_PACKAGE_DESCRIPTION  "Use and manage your Nitrokey")
+
+SET(CPACK_RPM_PACKAGE_SUMMARY "Use and manage your Nitrokey")
+SET(CPACK_RPM_PACKAGE_VENDOR "Nitrokey")
+SET(CPACK_RPM_PACKAGE_MAINTAINER "Georgios Gkitsas <george@nitrokey.com>" )
+SET(CPACK_RPM_PACKAGE_PRIORITY "optional")
+SET(CPACK_RPM_PACKAGE_SECTION "utils")
 
 
 INCLUDE(CPack)
