--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,29 @@ before_install:
     - sudo apt-get install -y qtdeclarative5-dev
     - sudo apt-get install -y  build-essential cmake libusb-1.0-0 libusb-1.0-0-dev
 
+install:
+    - cd ${TRAVIS_BUILD_DIR}
+    # install latest LCOV (1.9 was failing for me) [1]
+    - wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
+    - tar xf lcov_1.11.orig.tar.gz
+    - sudo make -C lcov-1.11/ install
+    # install lcov to coveralls conversion + upload tool
+    - gem install coveralls-lcov
+
+before_script: #(optional: for paranoiacs only)
+    - cd ${TRAVIS_BUILD_DIR}
+    - lcov --directory . --zerocounters
+
+
 compiler: g++
-script: make -f Makefile.top build
+script: 
+    - dc ${TRAVIS_BUILD_DIR}
+    - make -f Makefile.top build
+    - ./build/nitrokey-app
+
+after_success:
+    - cd ${TRAVIS_BUILD_DIR}
+    - lcov --directory . --capture --output-file coverage.info # capture coverage info
+    - lcov --remove coverage.info 'tests/*' '/usr/*' --output-file coverage.info # filter out system and test code
+    - lcov --list coverage.info # debug before upload
+    - coveralls-lcov --repo-token <your coveralls repo token> coverage.info # uploads to coveralls
