--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,8 @@ before_script: #(optional: for paranoiacs only)
 
 compiler: g++
 script: 
-    - dc ${TRAVIS_BUILD_DIR}
+    - cd ${TRAVIS_BUILD_DIR}
     - make -f Makefile.top build
-    - ./build/nitrokey-app
 
 after_success:
     - cd ${TRAVIS_BUILD_DIR}
