bash autocompletion script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -214,6 +214,13 @@ IF(NOT WIN32)
         ${CMAKE_SOURCE_DIR}/data/40-nitrokey.rules
         DESTINATION /etc/udev/rules.d
         )
+
+    # Install autocompletion scripts
+    install(FILES
+        ${CMAKE_SOURCE_DIR}/data//bash-autocomplete/nitrokey-app
+        DESTINATION /etc/bash_completion.d
+    )
+
 ENDIF()
 
 
