--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -221,6 +221,14 @@ IF(NOT WIN32)
         DESTINATION /usr/share/locale/de_DE/LC_MESSAGES
     )
 
+    install(FILES
+        ${CMAKE_SOURCE_DIR}/images/info.png
+        ${CMAKE_SOURCE_DIR}/images/quit.png
+        ${CMAKE_SOURCE_DIR}/images/safe_zahlenkreis.png
+        ${CMAKE_SOURCE_DIR}/images/settings.png
+        DESTINATION /usr/share/nitrokey
+    )
+
 ENDIF()
 
 
