--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -282,7 +282,7 @@ IF("${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}" MATCHES "x86_64")
     set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE amd64)
 ENDIF("${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}" MATCHES "x86_64")
 
-SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Georgios Gkitsas <george@nitrokey.com>" )
+SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Mateusz Zalega <mateusz@nitrokey.com>" )
 SET(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
 SET(CPACK_DEBIAN_PACKAGE_SECTION "utils")
 
@@ -297,7 +297,7 @@ SET(CPACK_RPM_PACKAGE_DESCRIPTION  "Use and manage your Nitrokey")
 
 SET(CPACK_RPM_PACKAGE_SUMMARY "Use and manage your Nitrokey")
 SET(CPACK_RPM_PACKAGE_VENDOR "Nitrokey")
-SET(CPACK_RPM_PACKAGE_MAINTAINER "Georgios Gkitsas <george@nitrokey.com>" )
+SET(CPACK_RPM_PACKAGE_MAINTAINER "Mateusz Zalega <mateusz@nitrokey.com>" )
 SET(CPACK_RPM_PACKAGE_PRIORITY "optional")
 SET(CPACK_RPM_PACKAGE_SECTION "utils")
 
