--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,8 @@ Priority: optional
 Maintainer: Georgios Gkitsas <george@nitrokey.com>
 Build-Depends:
     debhelper (>= 9),
-    libqt4-dev
+    libqt4-dev,
+    cmake
 Standards-Version: 3.9.4
 Homepage: http://nitrokey.com
 
