--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,8 @@ Maintainer: Georgios Gkitsas <george@nitrokey.com>
 Build-Depends:
     debhelper (>= 9),
     qtbase5-dev,
-    cmake
+    cmake,
+    pkg-config
 Standards-Version: 3.9.4
 Homepage: http://nitrokey.com
 
