--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,8 @@ Build-Depends:
     debhelper (>= 9),
     qtbase5-dev,
     cmake,
-    pkg-config
+    pkg-config,
+    libusb-1.0-0-dev
 Standards-Version: 3.9.4
 Homepage: http://nitrokey.com
 
