Adding temporary files to .gitignore Bumping up version to 0.3.2
Signed-off-by: Szczepan Zalega <szczepan.zalega@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,10 @@ ui_*.h
 *tags
 install
 CMakeCache.txt
+Makefile
+nitrokey-app
+*.*_parameters
+*.depends
+*.cmake
+CMakeFiles/
+qrc_resources.cpp
