Prevent make install dirty the root filesystem, stick to the prefix (pull #89)
Signed-off-by: Andrea Arcangeli <andrea@kernel.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ PROJECT(NitrokeyApp)
 SET(PROJECT_VERSION "0.3.2")
 #ADD_DEFINITIONS(-DSEAFILE_CLIENT_VERSION=${PROJECT_VERSION}) 
 
-OPTION(HAVE_LIBAPPINDICATOR "Compile support for libappindicator" YES)
+OPTION(HAVE_LIBAPPINDICATOR "Compile support for libappindicator" NO)
 
 INCLUDE(FindPkgConfig)
 
@@ -218,19 +218,19 @@ IF(NOT WIN32)
 
   # Install Nitrokey udev rules
   install(FILES
-    ${CMAKE_SOURCE_DIR}/data/40-nitrokey.rules
-    DESTINATION /usr/lib/udev/rules.d
+   ${CMAKE_SOURCE_DIR}/data/40-nitrokey.rules
+   DESTINATION usr/lib/udev/rules.d
   )
 
   # Install autocompletion scripts
   install(FILES
-    ${CMAKE_SOURCE_DIR}/data//bash-autocomplete/nitrokey-app
-    DESTINATION /etc/bash_completion.d
+   ${CMAKE_SOURCE_DIR}/data//bash-autocomplete/nitrokey-app
+    DESTINATION etc/bash_completion.d
   )
 
   install(FILES
-    ${CMAKE_SOURCE_DIR}/po/de_DE/nitrokey-app.mo
-    DESTINATION /usr/share/locale/de_DE/LC_MESSAGES
+   ${CMAKE_SOURCE_DIR}/po/de_DE/nitrokey-app.mo
+   DESTINATION share/locale/de_DE/LC_MESSAGES
   )
 
   install(FILES
@@ -238,7 +238,7 @@ IF(NOT WIN32)
     ${CMAKE_SOURCE_DIR}/images/quit.png
     ${CMAKE_SOURCE_DIR}/images/safe_zahlenkreis.png
     ${CMAKE_SOURCE_DIR}/images/settings.png
-    DESTINATION /usr/share/nitrokey
+    DESTINATION share/nitrokey
   )
 
 ENDIF () # NOT WIN32
