--- a/data/nitrokey-app.desktop
+++ b/data/nitrokey-app.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name="Nitrokey App"
+Name=Nitrokey App
 GenericName=Nitrokey Management Application
 Comment=Manage your Nitrokey devices
 TryExec=nitrokey-app
