--- a/debian/control
+++ b/debian/control
@@ -2,15 +2,13 @@ Source: nitrokey-app
 Section: utils
 Priority: optional
 Maintainer: Jan Suhr <jan@nitrokey.com>
-Build-Depends: debhelper (>= 9), qtcreator, qt5-default, libusb-1.0-0-dev, libgtk2.0-dev, libappindicator-dev, libnotify-dev, hardening-wrapper
-Standards-Version: 3.9.5
+Build-Depends: debhelper (>= 9), qt5-base, libusb-1.0-0-dev, libgtk2.0-dev, libappindicator-dev, libnotify-dev
+Standards-Version: 3.9.7
 Homepage: https://www.nitrokey.com
-#Vcs-Git: git://anonscm.debian.org/collab-maint/nitrokey-app.git
-#Vcs-Browser: http://anonscm.debian.org/?p=collab-maint/nitrokey-app.git;a=summary
 
 Package: nitrokey-app
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libusb-1.0-0, libappindicator1, libnotify4
+Depends: ${shlibs:Depends}, ${misc:Depends}, qt5-base, libusb-1.0-0, libappindicator1, libnotify4
 Description: Nitrokey App for usage with Nitro Key Pro
  The Nitrokey App is required for Nitrokey Pro and Nitrokey Storage.
  It offers Google Authenticator compatible One-Time-Passwords and
