--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: nitrokey-app
 Section: universe/utils
 Priority: optional
 Maintainer: Jan Suhr <jan@nitrokey.com>
-Build-Depends: debhelper (>= 9), libqt5core5a, libqt5dbus5, libqt5gui5, libqt5widgets5, libqt5xml5, qt5-qmake, qtbase5-dev-tools, libusb-1.0-0-dev, libgtk2.0-dev, libappindicator-dev, libnotify-dev
+Build-Depends: debhelper (>= 9), qtchooser, libqt5core5a, libqt5dbus5, libqt5gui5, libqt5widgets5, libqt5xml5, qt5-qmake, qtbase5-dev-tools, qtbase5-dev, libusb-1.0-0-dev, libgtk2.0-dev, libappindicator-dev, libnotify-dev
 Standards-Version: 3.9.7
 Homepage: https://www.nitrokey.com
 
