Change install destination in CMake for udev rules to /usr/lib/udev/rules.d/ #11
Signed-off-by: Szczepan Zalega <szczepan@nitrokey.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -219,7 +219,7 @@ IF(NOT WIN32)
   # Install Nitrokey udev rules
   install(FILES
     ${CMAKE_SOURCE_DIR}/data/40-nitrokey.rules
-    DESTINATION /etc/udev/rules.d
+    DESTINATION /usr/lib/udev/rules.d
   )
 
   # Install autocompletion scripts
