Change installation paths for CMake (as in pull #14)
Signed-off-by: Szczepan Zalega <szczepan@nitrokey.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -204,17 +204,17 @@ IF(NOT WIN32)
       #      ${CMAKE_SOURCE_DIR}/data/icons/48x48
       #      ${CMAKE_SOURCE_DIR}/data/icons/128x128
     ${CMAKE_SOURCE_DIR}/data/icons/
-    DESTINATION share/icons/
+    DESTINATION usr/share/icons/
   )
 
   install(FILES
     ${CMAKE_SOURCE_DIR}/data/nitrokey-app.desktop
-    DESTINATION share/applications
+    DESTINATION usr/share/applications
   )
 
   install(FILES
     ${CMAKE_SOURCE_DIR}/data/icons/hicolor/128x128/apps/nitrokey-app.png
-    DESTINATION share/pixmaps
+    DESTINATION usr/share/pixmaps
   )
 
   # Install Nitrokey udev rules
@@ -231,7 +231,7 @@ IF(NOT WIN32)
 
   install(FILES
    ${CMAKE_SOURCE_DIR}/po/de_DE/nitrokey-app.mo
-   DESTINATION share/locale/de_DE/LC_MESSAGES
+   DESTINATION usr/share/locale/de_DE/LC_MESSAGES
   )
 
   install(FILES
@@ -239,7 +239,7 @@ IF(NOT WIN32)
     ${CMAKE_SOURCE_DIR}/images/quit.png
     ${CMAKE_SOURCE_DIR}/images/safe_zahlenkreis.png
     ${CMAKE_SOURCE_DIR}/images/settings.png
-    DESTINATION share/nitrokey
+    DESTINATION usr/share/nitrokey
   )
 
 ENDIF () # NOT WIN32
@@ -252,7 +252,7 @@ ADD_EXECUTABLE(nitrokey-app ${GUI_TYPE}
   ${resources_ouput}
 )
 
-INSTALL(TARGETS nitrokey-app DESTINATION bin)
+INSTALL(TARGETS nitrokey-app DESTINATION usr/bin)
 
 TARGET_LINK_LIBRARIES(nitrokey-app
   ${QT_LIBRARIES}
