--- a/debian/control
+++ b/debian/control
@@ -1,16 +1,14 @@
 Source: nitrokey-app
-Section: utils
+Section: universe/utils
 Priority: optional
 Maintainer: Jan Suhr <jan@nitrokey.com>
-Build-Depends: debhelper (>= 9), qtcreator, qt5-default, libusb-1.0-0-dev, libgtk2.0-dev, libappindicator-dev, libnotify-dev, hardening-wrapper
-Standards-Version: 3.9.5
+Build-Depends: debhelper (>= 9), qtchooser, libqt5core5a, libqt5dbus5, libqt5gui5, libqt5widgets5, libqt5xml5, qt5-qmake, qtbase5-dev-tools, qtbase5-dev, libusb-1.0-0-dev, libgtk2.0-dev, libappindicator-dev, libnotify-dev
+Standards-Version: 3.9.7
 Homepage: https://www.nitrokey.com
-#Vcs-Git: git://anonscm.debian.org/collab-maint/nitrokey-app.git
-#Vcs-Browser: http://anonscm.debian.org/?p=collab-maint/nitrokey-app.git;a=summary
 
 Package: nitrokey-app
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libusb-1.0-0, libappindicator1, libnotify4
+Depends: ${shlibs:Depends}, ${misc:Depends}, libqt5core5a, libqt5dbus5, libqt5gui5, libqt5widgets5, libqt5xml5, libusb-1.0-0, libappindicator1, libnotify4
 Description: Nitrokey App for usage with Nitro Key Pro
  The Nitrokey App is required for Nitrokey Pro and Nitrokey Storage.
  It offers Google Authenticator compatible One-Time-Passwords and
