Update snapcraft - code source (launchpad do not want to download from github)
Signed-off-by: Szczepan Zalega <szczepan@nitrokey.com>

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -33,7 +33,8 @@ parts:
   application:
     plugin: qmake
     qt-version: qt5
-    source: git://github.com/Nitrokey/nitrokey-app.git
+    source: lp:~szszszsz/nitrokey/release_tmp
+    #source: git://github.com/Nitrokey/nitrokey-app.git
     snap:
         - -usr/lib/x86_64-linux-gnu/libLLVM-3.8.so.1
           #- -usr/lib/x86_64-linux-gnu/dri/ #5MB less, but with DRI errors, not needed probably but lets leave it for now
