--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0 FATAL_ERROR)
 cmake_policy(SET CMP0043 OLD) # cmake --help-policy CMP0043
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMake/Modules/")
@@ -6,6 +6,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMake/Modules/")
 PROJECT(NitrokeyApp)
 SET(PROJECT_VERSION "0.6.1")
 #ADD_DEFINITIONS(-DSEAFILE_CLIENT_VERSION=${PROJECT_VERSION}) 
+
 
 #Please use either 'cmake -DHAVE_LIBAPPINDICATOR=NO' or 'ccmake' to change this value
 OPTION(HAVE_LIBAPPINDICATOR "Compile support for libappindicator" YES)
@@ -296,6 +297,8 @@ ADD_EXECUTABLE(nitrokey-app ${GUI_TYPE}
   ${ui_output}
   ${resources_ouput}
 )
+
+set_property(TARGET nitrokey-app PROPERTY CXX_STANDARD 11)
 
 INSTALL(TARGETS nitrokey-app DESTINATION bin)
 
