Disable default support for libappindicator in CMake build path
Signed-off-by: Szczepan Zalega <szczepan@nitrokey.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ SET(PROJECT_VERSION "0.6.1")
 
 
 #Please use either 'cmake -DHAVE_LIBAPPINDICATOR=NO' or 'ccmake' to change this value
-OPTION(HAVE_LIBAPPINDICATOR "Compile support for libappindicator" YES)
+OPTION(HAVE_LIBAPPINDICATOR "Compile support for libappindicator" NO)
 
 INCLUDE(FindPkgConfig)
 
