Travis: remove libappindicator and add clang for build
Exclude clang with qmake
CMake build verbose

Signed-off-by: Szczepan Zalega <szczepan@nitrokey.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,32 @@ notifications:
     email: false
 language: c++
 os:
-- linux
+  - linux
+#  - osx
 
-sudo: required
+sudo: true
 dist: trusty
 
 before_install:
-    - sudo add-apt-repository --yes ppa:beineri/opt-qt551-trusty
-    - sudo apt-get -qq update
-    - sudo apt-get -qq install qt55base
-    - sudo apt-get install -y build-essential cmake libusb-1.0-0 libusb-1.0-0-dev libgtk2.0-dev libappindicator-dev libnotify-dev 
-compiler: g++
+  - sudo add-apt-repository --yes ppa:beineri/opt-qt551-trusty
+  - sudo apt-get -qq update
+  - sudo apt-get -qq install qt55base
+  - sudo apt-get install -y build-essential cmake libusb-1.0-0 libusb-1.0-0-dev mesa-common-dev libgl1-mesa-dev
+
+compiler:
+  - g++
+  - clang++
+
 script:
-    - source /opt/qt55/bin/qt55-env.sh
-    - /opt/qt55/bin/qmake
-    - make
+  - source /opt/qt55/bin/qt55-env.sh
+  - if [ "$builder" == "qmake" ]; then /opt/qt55/bin/qmake && make ; fi
+  - if [ "$builder" == "cmake" ]; then cmake . && make VERBOSE=1; fi
+
+env:
+  - builder=cmake
+  - builder=qmake
+
+matrix:
+  exclude:
+    - compiler: clang++
+      env: builder=qmake
