--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,10 @@ INCLUDE(FindPkgConfig)
 IF (NOT CMAKE_BUILD_TYPE)
   SET(CMAKE_BUILD_TYPE Debug)
 ENDIF()
-MESSAGE("Build type: ${CMAKE_BUILD_TYPE}") 
+IF (CMAKE_BUILD_TYPE=Debug)
+    ADD_DEFINITIONS(-DSTICK20_DEBUG)
+ENDIF()
+MESSAGE("Build type: ${CMAKE_BUILD_TYPE}")
 ADD_DEFINITIONS(-DCMAKE_BUILD_TYPE="${CMAKE_BUILD_TYPE}")
 ADD_DEFINITIONS(-DCMAKE_CXX_COMPILER="${CMAKE_CXX_COMPILER_ID}, ${CMAKE_CXX_COMPILER}")
 ADD_DEFINITIONS(-DCMAKE_CXX_FLAGS="${CMAKE_CXX_FLAGS}")
