Add debug info from hidapi
Signed-off-by: Szczepan Zalega <szczepan@nitrokey.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ IF (NOT CMAKE_BUILD_TYPE)
 ENDIF()
 IF (CMAKE_BUILD_TYPE=Debug)
     ADD_DEFINITIONS(-DSTICK20_DEBUG)
+    ADD_DEFINITIONS(-DDEBUG_PRINTF)
 ENDIF()
 MESSAGE("Build type: ${CMAKE_BUILD_TYPE}")
 ADD_DEFINITIONS(-DCMAKE_BUILD_TYPE="${CMAKE_BUILD_TYPE}")
